--- a/css/style.scss
+++ b/css/style.scss
@@ -1,22 +1,25 @@
 @import 'colors';
 @import 'null';
 
-
-//      *HEADER*
-
+//-----------*HEADER*-----------
+.start {
+    background-image: url(/SHELTER/assets/images/start-bkg.png);
+    background-repeat: no-repeat;
+  }
 .header {
 &__container {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 60px 40px 60px 40px;
+    padding: 80px 40px 60px 40px;
     height: 60px;
-    background-color: rgba(0, 255, 255, 0.192);
         }
     &__logo {
+        position: relative;
         min-width: max-content;
+        height: 60px;
         &.title {
-            position: relative;
+            position: absolute;
             width: 184px;
             height: 35px;
             color: $primary;
@@ -27,7 +30,7 @@
             letter-spacing: 0.06em;
         }
         &.subtitle {
-            position: relative;
+            position: absolute;
             color: $light-xl;
             font-size: 86%;
             line-height: 107%;
@@ -35,20 +38,22 @@
             width: 179px;
             height: 15px;
             left: 4px;
+            bottom: 0;
         }
     }
 }
 .menu {
     position: relative;
     align-self: center;
-    background-color: rgba(255, 192, 203, 0.301);
     &__list {
         display: flex;
         justify-content: space-between;
         width: 443px;
+    &__item{
+        background-color: aqua;
+    }
     }
     &__link {
-        background-color: rgba(255, 228, 196, 0.274);
         position: relative;
         left: 0;
         min-width: auto;
@@ -60,26 +65,32 @@
     }    
 }
 
+//-----------*PAGE*-----------
+
 .page {
     position: relative;
     display: flex;
     justify-content: space-between;
-    padding: 0px 40px;
-    height: 720px;
+    padding: 30px 40px;
+    height: 758px;
     &__content{
         position: relative;
         width: 460px;
         height: 322px;
         top: 163px;
-        background-color: rgba(0, 255, 255, 0.062);
     }
     &__head {
         position: absolute;
+        display: flex;
+        align-items: center;
         width: 310px;
         height: 114px;
         left: calc(50% - 310px/2 - 75px);
         bottom: 208px;
-        background-color: rgba(137, 43, 226, 0.233);
+        font-family: 'Georgia';
+        font-size: 44px;
+        line-height: 130%;
+        color: $light-xl;
     }
     &__subhead{
         position: absolute;
@@ -87,27 +98,80 @@
         height: 72px;
         left: calc(50% - 460px/2);
         bottom: 94px;
-        background-color: rgba(0, 0, 255, 0.171);
+        line-height: 160%;
+        font-family: 'Arial';
+        font-size: 15px;
+        color: $darck-s;
     }
     &__button {
         position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
         width: 207px;
         height: 52px;
-        left: calc(50% - 207px/2 - 126.5px);
         border-radius: 100px;
+        text-align:center;
         color: black;
         background-color: bisque;
         bottom: 0px;
         }
-    }
-    &__puppy {
-
+.btn {
+    letter-spacing: 0.06em;
+    left: 21.74%;
+    right: 21.74%;
+    top: 28.85%;
+    bottom: 28.85%;
+    margin: 10px 0px;
+    font-family: 'Georgia';
+    font-size: 17px;
+    line-height: 130%;
+    color: $darck-3xl;
+}
+        &__puppy {
         background-image: url(/SHELTER/assets/images/puppy.png);
-        background-color: rgba(127, 255, 212, 0.123);
         width: 698px;
         height: 728px;
         left: calc(50% - 698px/2 + 251px);
-        margin-top: 60px;
         bottom: 0;
     }
+}
+
+//-----------*ABOUT*-----------
+
+.about {
+    background-color: aquamarine;
+    height: 588px;
+}
+
+
+
+
+
+//-----------*PETS*-----------
+
+.pets {
+    background-color: rgb(93, 163, 255);
+    height: 877px;  
+}
+//-----------*HELP*-----------
+
+.help {
+    background-color: rgb(93, 255, 193);
+    height: 611px;  
+}
+
+//-----------*DONATION*-----------
+
+.donation {
+    background-color: rgb(231, 255, 93);
+    height: 462px;  
+}
+
+//-----------*FOOTER*-----------
+
+.footer {
+    background-color: rgb(131, 255, 93);
+    height: 350px;  
 }
