--- a/css/style.scss
+++ b/css/style.scss
@@ -3,7 +3,7 @@
 
 //-----------*HEADER*-----------
 .start {
-    background-image: url(../assets/images/start-bkg.png);
+    background-image: url(./assets/images/start-bkg.png);
     background-repeat: no-repeat;
   }
 .header {
