--- a/css/style.css
+++ b/css/style.css
@@ -41,11 +41,6 @@ html, body {
   overflow: hidden;
 }
 
-._container {
-  background-image: url(assets/images/start-bkg.png);
-  background-repeat: no-repeat;
-}
-
 .start {
   background-image: url(../assets/images/start-bkg.png);
   background-repeat: no-repeat;
@@ -215,7 +210,7 @@ html, body {
 }
 
 .page__puppy {
-  background-image: url(assets/images/puppy.png);
+  background-image: url(../assets/images/puppy.png);
   width: 698px;
   height: 728px;
   left: calc(50% - 698px/2 + 251px);
