--- a/css/style.css
+++ b/css/style.css
@@ -41,21 +41,6 @@ html, body {
   overflow: hidden;
 }
 
-.start {
-  background-image: url(assets/images/start-bkg.png);
-  background-repeat: no-repeat;
-}
-
-h3 {
-  font-family: 'Georgia';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 35px;
-  line-height: 130%;
-  letter-spacing: 0.06em;
-  color: #545454;
-}
-
 .header__container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -134,6 +119,21 @@ h3 {
   color: #FFFFFF;
   -webkit-text-decoration: #fff;
           text-decoration: #fff;
+}
+
+.start {
+  background-image: url(../assets/images/start-bkg.png);
+  background-repeat: no-repeat;
+}
+
+h3 {
+  font-family: 'Georgia';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 35px;
+  line-height: 130%;
+  letter-spacing: 0.06em;
+  color: #545454;
 }
 
 .page {
@@ -279,6 +279,9 @@ h3 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -286,36 +289,15 @@ h3 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  position: relative;
   height: 100%;
   width: 100%;
-  background-color: rgba(250, 93, 255, 0.575);
 }
 
 .pets__heading {
   text-align: center;
   width: 400px;
   height: 90px;
-  background-color: rgba(112, 255, 93, 0.575);
-}
-
-.pets__headingprev {
-  display: block;
-  height: 52px;
-  width: 52px;
-  border: 2px solid #F1CDB3;
-  border-radius: 100px;
-}
-
-.petsnext {
-  height: 52px;
-  width: 52px;
-  border: 2px solid #F1CDB3;
-  border-radius: 100px;
-  -webkit-transform: rotate(-180deg);
-          transform: rotate(-180deg);
 }
 
 .pets__button {
@@ -346,6 +328,76 @@ h3 {
   letter-spacing: 0.06em;
   line-height: 130%;
   color: #292929;
+}
+
+.slider-wrap {
+  max-width: 82.5%;
+  height: 435px;
+  margin: 60px 0px;
+  overflow: hidden;
+}
+
+.slider-wrap .animate {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 1650px;
+  -webkit-transition-property: -webkit-transform;
+  transition-property: -webkit-transform;
+  transition-property: transform;
+  transition-property: transform, -webkit-transform;
+  -webkit-transition-duration: 0.8s;
+          transition-duration: 0.8s;
+}
+
+.slider-wrap .slide {
+  min-width: 330px;
+  height: 435px;
+  float: left;
+  -webkit-transform: translate(-330px);
+          transform: translate(-330px);
+  z-index: 29;
+}
+
+.slider-wrap .controls {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 100%;
+  z-index: 30;
+}
+
+.slider-wrap .prev {
+  width: 52px;
+  height: 52px;
+  padding: 15px 0px;
+  border-radius: 100px;
+  border: 2px solid #F1CDB3;
+  text-align: center;
+  cursor: pointer;
+}
+
+.slider-wrap .next {
+  width: 52px;
+  height: 52px;
+  padding: 15px 0px;
+  border-radius: 100px;
+  border: 2px solid #F1CDB3;
+  text-align: center;
+  -webkit-transform: rotate(-180deg);
+          transform: rotate(-180deg);
+  cursor: pointer;
 }
 
 .help {
