--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,19 @@
 @import 'colors';
 @import 'null';
 
+.start {
+    background-image: url(../assets/images/start-bkg.png);
+    background-repeat: no-repeat;
+  }
+h3 {
+    font-family: 'Georgia', Regular;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 35px;
+    line-height: 130%;
+    letter-spacing: 0.06em;
+    color:  $darck-l;
+}
 
 //-----------*HEADER*-----------
 
@@ -58,25 +71,12 @@
         color: $darck-s;    
         &:hover {
             color: $light-xl;
-            text-decoration: #fff;
+            text-decoration: $light-xl;
         }
     }    
 }
 
 //-----------*SRAT PAGE*-----------
-.start {
-    background-image: url(../assets/images/start-bkg.png);
-    background-repeat: no-repeat;
-  }
-h3 {
-    font-family: 'Georgia';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 35px;
-    line-height: 130%;
-    letter-spacing: 0.06em;
-    color:  $darck-l;
-}
 
 .page {
     position: relative;
@@ -182,7 +182,7 @@ h3 {
 //-----------*PETS*-----------
 
 .pets {
-    background-color: rgb(93, 163, 255);
+    background-color: $light-l;
     height: 877px;
     padding: 80px 40px 100px 40px;
     &__container {
@@ -223,7 +223,7 @@ h3 {
 //-----------*SLIDER*-----------  
 
 .slider-wrap {
-    max-width: 82.5%;
+    max-width: 86.9%;
     height: 435px;
     margin: 60px 0px;
     overflow: hidden;
@@ -231,15 +231,15 @@ h3 {
     position: relative;
     display: flex;
     flex-direction: row;
-    width: 1650px;
+    width: 1738px;
     transition-property: transform;
     transition-duration: 0.8s;
     }
 .slide {
-    min-width: 330px;
+    min-width: 347px;
     height: 435px;
     float: left;
-    transform: translate(-330px);
+    transform: translate(-347px);
     z-index: 29;
     }
 .controls {
@@ -273,6 +273,44 @@ h3 {
 
 }
 
+.card {
+    position: relative;
+    text-align: center;
+    margin: 0 11%;
+    background-color: $light-s;
+    border-radius: 9px 9px 0px 0px;
+    &__img {
+        max-width: 100%;
+    }
+    &__title {
+        position: absolute;
+        left: 0;
+        right: 0;
+        margin: auto;
+        bottom: 112px;
+    }
+    &__btn {
+        position: absolute;
+        margin: auto;
+        bottom: 30px;
+        left: 0;
+        right: 0;
+        width: 187px;
+        border: 2px solid #F1CDB3;
+        box-sizing: border-box;
+        padding: 15px 45px;
+        border-radius: 100px;
+        cursor: pointer;
+    }
+    &__text {
+        font-family: 'Georgia', Regular;
+        width: 98px;
+        font-size: 17px;
+        letter-spacing: 0.06em;
+        line-height: 130%;
+        color: $darck-3xl;
+    }
+}
 
  //-----------*HELP*-----------
 
